--- a/mobile/driver-app/pubspec.yaml
+++ b/mobile/driver-app/pubspec.yaml
@@ -1,29 +1,50 @@
 name: driver_ui
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0' # Use a standard constraint
 
+# Dependencies specify other packages that your package needs in order to work.
 dependencies:
   flutter:
     sdk: flutter
 
+  # Your existing packages
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   http: ^1.5.0
-  google_fonts: ^6.2.1 # <-- ADD THIS LINE
+  google_fonts: ^6.2.1 # Keep this one
+
+  # --- ADD THESE 4 MISSING LINES ---
+  firebase_core: ^3.0.0      # Must-have for all Firebase apps
+  firebase_auth: ^5.0.0      # For Login/Register
+  cloud_firestore: ^5.0.0    # For the database
+  # --- END OF ADDED LINES ---
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^5.0.0 # Use a recent version
 
+# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
+
+  # To add custom fonts to your application, add a fonts section here,
+  # example:
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
 
