--- a/mobile/passenger-app/pubspec.yaml
+++ b/mobile/passenger-app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   http: ^1.2.1
   shared_preferences: ^2.2.3
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
@@ -49,12 +50,17 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.3.5
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/logo_animation.mp4
+    - assets/logo.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -91,3 +97,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_native_splash:
+  color: "#111827"  # Your background color
+  image: assets/native_splash_logo.png  # A static image for the native splash
+  android: true
+  ios: true
+  web: false
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.jpg"
+  adaptive_icon_background: "#08082e"
+  adaptive_icon_foreground: "assets/logo.jpg"
