--- a/mobile/passenger-app/pubspec.yaml
+++ b/mobile/passenger-app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.3
   video_player: ^2.8.1
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,7 @@ flutter:
   assets:
     - assets/logo_animation.mp4
     - assets/logo.jpg
+    - assets/bus_icon.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
