--- a/mobile/passenger-app/android/app/src/main/AndroidManifest.xml
+++ b/mobile/passenger-app/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:label="BusTrackLK"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="ADD KEY"/>
+            android:value="AIzaSyDpJr_ftEzQTcSLTgbijOEq9AasM7D8FBk"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
