--- a/mobile/passenger-app/pubspec.yaml
+++ b/mobile/passenger-app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.2.3
   video_player: ^2.8.1
   location: ^6.0.2
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
 
 dev_dependencies:
   flutter_test:
